@@ -2021,31 +2021,3 @@ on_any_progress_bar_realized(GtkWidget *widget,
 			(GThreadFunc) progress_bar_thread_entry, 
 			descr, FALSE, NULL);
 }
-
-
-
-gint
-widget_get_type_from_pointer(GtkWidget *widget)
-{
-	/*
-	 * Must be in a perfect order, since there is a class hierarchy here!
-	 */
-	if (GTK_IS_LABEL(widget))
-		return WIDGET_LABEL;
-	else if (GTK_IS_ENTRY(widget))
-		return WIDGET_ENTRY;
-	else if (GTK_IS_TEXT_VIEW(widget))
-		return WIDGET_EDIT;
-	else if (GTK_IS_CHECK_BUTTON(widget))
-		return WIDGET_CHECKBOX;
-	else if (GTK_IS_RADIO_BUTTON(widget))
-		return WIDGET_RADIO;
-	else if (GTK_IS_PROGRESS_BAR(widget))
-		return WIDGET_PROGRESS;
-	else if (GTK_IS_WINDOW(widget))
-		return WIDGET_WINDOW;
-	else if (GTK_IS_BUTTON(widget))
-		return WIDGET_BUTTON;
-	return 0;
-}
-
